Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-106598

MessageDialog won't open if its parent is a plain item

XMLWordPrintable

    • f233a5ff9 (dev), ba596daec (6.7), 436935352 (6.6), 58ed03f3d (tqtc/lts-6.5)

      See attached.  Apparently it expects its parent to always be an ApplicationWindow.  That's rather limiting compared to the other dialogs (Controls 2's Dialog, or Dialogs 1's MessageDialog, or Qt.labs.platform, or plain Window).  See also examples attached to QTBUG-35660.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hurlevent Oliver Eftevaag
            srutledg Shawn Rutledge
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes